--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>HalfMomentum|Site</title>
+  </head>
+  <body>
+    <h1>Madhav Malpani</h1>
+    <h3>Personal Website</h3>
+    <a href="link1">Random Check</a>
+  </body>
+</html>
