--- a/index.html
+++ b/index.html
@@ -1,12 +1,126 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>HalfMomentum|Site</title>
-  </head>
-  <body>
-    <h1>Madhav Malpani</h1>
-    <h3>Personal Website</h3>
-    <a href="link1">Random Check</a>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Half Momentum</title>
+
+
+  <link rel='stylesheet prefetch' href='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/css/materialize.min.css'>
+
+  <link rel="stylesheet" href="css/style.css">
+
+
+</head>
+
+<body>
+  <div class="intro grey darken-1 z-depth-1">
+    <h1 class="grey-text text-lighten-5">Madhav Malpani</h1>
+  </div>
+
+  <div class="container about">
+    <h5>Profile</h5>
+
+    <hr>
+    <div class="row">
+      <div class="col s12 m4 l4">
+        <h6>About</h6>
+        <p>My journey began at Shiv Nadar University as a student of B.Tech. Computer Science and Engineering.</p>
+        <p>I am willing to learn, observe and create. Looking out for motivation (and lots of help).</p>
+        <p>Now I am trying to figure out where can I fit best in this large ocean of codes and coats.</p>
+      </div>
+      <br>
+      <div class="col s12 m4 l4">
+        <div class="card blue-grey darken-1">
+          <div class="card-content white-text">
+            <img style="border-radius:100%" src="https://avatars0.githubusercontent.com/u/23341593?s=400&u=2c260827268f1b98e55e96398d4b953cc4d5c488&v=4" width="64" height="64">
+            <p>New Day, New world</p>
+            <p>Old Method, Old ways</p>
+            <p>Remember all;</p>
+          </div>
+          <div class="card-action">
+            <a href='https://github.com/HalfMomentum'>to github</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m4 l4">
+        <h6>New and Skills</h6>
+        <ul class="collapsible">
+
+          <li class="active">
+            <div class="collapsible-header waves-effect"><i class="mdi-av-web"></i>Basics</div>
+            <div class="collapsible-body">
+              <ul class="card-action">
+                <li>C</li>
+                <li>C++</li>
+                <li>Python</li>
+                <li>Java</li>
+              </ul>
+            </div>
+          </li>
+
+          <li class="active">
+            <div class="collapsible-header waves-effect"><i class="mdi-av-web"></i>Web Development</div>
+            <div class="collapsible-body">
+              <p><i>Just Basics for</i></p>
+              <ul>
+                <li>Node</li>
+                <li>Laravel-PHP</li>
+                <li>Django</li>
+                <li>Flask</li>
+              </ul>
+            </div>
+          </li>
+
+          <li class="active">
+            <div class="collapsible-header waves-effect"><i class="mdi-av-web"></i>App Development</div>
+            <div class="collapsible-body">
+              <p><i>Trying to have a proper hands-on on</i></p>
+              <ul>
+                <li>Android Studio</li>
+                <li>Universal Windows Platfrom</li>
+              </ul>
+            </div>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="container portfolio">
+    <h5>portfolio</h5>
+    <hr>
+    <h6>Lookout for this area in future for exciting projects</h6>
+    <h6>Contact me if you have an idea for me to work upon</h6>
+    <div class="row">
+      <div class="col s12 m12 l12 portfolio-holder">
+        <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+        <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+        <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+      </div>
+    </div>
+  </div>
+  <div class="container contact">
+    <h5>contact</h5>
+    <hr>
+    <div class="contact">
+      <h6>P.O. Shiv Nadar University <br>
+        NH-91, Tehsil Dadri, Gautam Buddha Nagar <br>
+        U.P. 201314</h6><br>
+        <h6>mm305@snu.edu.in</h6>
+      </div>
+    </div>
+    <footer>
+      <div class="footer-copyright">
+        <div class="container">
+          <a class="grey-text right" href="https://scotch.io/@narayan">Template by Narayan Prusty</a>
+        </div>
+      </div>
+    </footer>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
+
+    <script  src="js/index.js"></script>
+
   </body>
-</html>
+  </html>
