checking vuejs implemetation in browser

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Half Momentum</title>
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.css">
 
-  <link rel='stylesheet prefetch' href='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/css/materialize.min.css'>
+<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.js"></script>
+
 
   <link rel="stylesheet" href="css/style.css">
 
-
 </head>
 
-<body>
+<!--body>
   <div class="intro grey darken-1 z-depth-1">
     <h1 class="grey-text text-lighten-5">Madhav Malpani</h1>
   </div>
@@ -32,7 +34,8 @@
       <div class="col s12 m4 l4">
         <div class="card blue-grey darken-1">
           <div class="card-content white-text">
-            <img style="border-radius:100%" src="https://avatars0.githubusercontent.com/u/23341593?s=400&u=2c260827268f1b98e55e96398d4b953cc4d5c488&v=4" width="64" height="64">
+            <img style="border-radius:100%" src="https://avatars0.githubusercontent.com/u/23341593?s=400&u=2c260827268f1b98e55e96398d4b953cc4d5c488&v=4"
+              width="64" height="64">
             <p>New Day, New world</p>
             <p>Old Method, Old ways</p>
             <p>Remember all;</p>
@@ -47,37 +50,56 @@
         <ul class="collapsible">
 
           <li class="active">
-            <div class="collapsible-header waves-effect"><i class="mdi-av-web"></i>Basics</div>
+            <div class="collapsible-header waves-effect">
+              <i class="mdi-av-web"></i>Basics</div>
             <div class="collapsible-body">
               <ul class="card-action">
-                <li>C</li>
-                <li>C++</li>
                 <li>Python</li>
                 <li>Java</li>
+                <li>Javascript</li>
+                <li>C</li>
+                <li>C++</li>
               </ul>
             </div>
           </li>
 
           <li class="active">
-            <div class="collapsible-header waves-effect"><i class="mdi-av-web"></i>Web Development</div>
+            <div class="collapsible-header waves-effect">
+              <i class="mdi-av-web"></i>Web Development</div>
             <div class="collapsible-body">
-              <p><i>Just Basics for</i></p>
+              <p>
+                <i>Just Basics for</i>
+              </p>
               <ul>
-                <li>Node</li>
-                <li>Laravel-PHP</li>
                 <li>Django</li>
                 <li>Flask</li>
+                <li>Node</li>
+                <li>Laravel-PHP</li>
+              </ul>
+              <p>
+                <i>There is front-end as well</i>
+              </p>
+              <ul>
+                <li>Django</li>
+                <li>Flask</li>
+                <li>Node</li>
+                <li>Laravel-PHP</li>
               </ul>
             </div>
           </li>
 
           <li class="active">
-            <div class="collapsible-header waves-effect"><i class="mdi-av-web"></i>App Development</div>
+            <div class="collapsible-header waves-effect">
+              <i class="mdi-av-web"></i>App Development</div>
             <div class="collapsible-body">
-              <p><i>Trying to have a proper hands-on on</i></p>
+              <p>
+                <i>Trying to have a proper hands-on on</i>
+              </p>
               <ul>
                 <li>Android Studio</li>
-                <li>Universal Windows Platfrom</li>
+                <li>
+                  <strike>Universal Windows Platfrom</strike>
+                </li>
               </ul>
             </div>
           </li>
@@ -104,23 +126,26 @@
     <h5>contact</h5>
     <hr>
     <div class="contact">
-      <h6>P.O. Shiv Nadar University <br>
-        NH-91, Tehsil Dadri, Gautam Buddha Nagar <br>
-        U.P. 201314</h6><br>
-        <h6>mm305@snu.edu.in</h6>
-      </div>
+      <h6>P.O. Shiv Nadar University
+        <br> NH-91, Tehsil Dadri, Gautam Buddha Nagar
+        <br> U.P. 201314</h6>
+      <br>
+      <h6>mm305@snu.edu.in</h6>
     </div>
-    <footer>
-      <div class="footer-copyright">
-        <div class="container">
-          <a class="grey-text right" href="https://scotch.io/@narayan">Template by Narayan Prusty</a>
-        </div>
-      </div>
-    </footer>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
+  </div>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
 
-    <script  src="js/index.js"></script>
+  <script src="js/index.js"></script>
 
-  </body>
-  </html>
+</body-->
+
+<body>
+  <div id="app">
+
+  </div>
+  <script src="app/dist/localbuild.js"></script>
+  
+</body>
+
+</html>
