relative paths used

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
   <link rel="stylesheet" href="css/style.css">
 
 </head>
+  <body>
+    <div id="app">
 
+    </div>
+    <script src="./app/dist/localbuild.js"></script>
+
+  </body>
 <!--body>
   <div class="intro grey darken-1 z-depth-1">
     <h1 class="grey-text text-lighten-5">Madhav Malpani</h1>
@@ -140,12 +146,6 @@
 
 </body-->
 
-<body>
-  <div id="app">
 
-  </div>
-  <script src="app/dist/localbuild.js"></script>
-  
-</body>
 
 </html>
