--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <div id="app">
 
   </div>
-  <script src="app/dist/localbuild.js"></script>
+  link
+  <script type="text/javascript" src="app/dist/localbuild.js"></script>
 
 </body>
 
