--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 
 <body>
   <div id="app">
-
+    some
   </div>
-  link
   <script type="text/javascript" src="app/dist/localbuild.js"></script>
 
 </body>
